--- a/app/src/main/res/layout/activity_favorite_room.xml
+++ b/app/src/main/res/layout/activity_favorite_room.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="@dimen/_60sdp"
         android:drawableStart="@drawable/ic_search"
         android:drawablePadding="@dimen/_5sdp"
-        android:hint="Search For Room Names"
+        android:hint="Search Room Names"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete"
         android:paddingStart="@dimen/_10sdp"
