--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -38,13 +38,13 @@
                 android:gravity="center"
                 android:text="Contact Us"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_20ssp"
+                android:textSize="@dimen/_30ssp"
                 android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_30sdp">
+                android:layout_marginTop="@dimen/_20sdp">
 
                 <EditText
                     android:id="@+id/etvFirstName"
@@ -117,8 +117,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:paddingStart="@dimen/_30sdp"
+                android:paddingEnd="@dimen/_30sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:text="Send"
+                android:textSize="@dimen/_20ssp"
                 android:textColor="@color/white"
                 app:backgroundTint="@color/darkBlue" />
 
