--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -26,12 +26,11 @@
         android:layout_marginStart="@dimen/_60sdp"
         android:layout_marginEnd="@dimen/_60sdp"
         android:drawableStart="@drawable/ic_search"
-        android:drawablePadding="@dimen/_5sdp"
-        android:hint="Search For Room Names"
+        android:hint="Search Room Names"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_30sdp"
+        android:paddingStart="@dimen/_5sdp"
+        android:paddingEnd="@dimen/_25sdp"
         android:singleLine="true"
         app:layout_constraintTop_toTopOf="parent" />
 
