--- a/app/src/main/res/layout/activity_up_coming_meeting.xml
+++ b/app/src/main/res/layout/activity_up_coming_meeting.xml
@@ -25,7 +25,7 @@
         android:drawableStart="@drawable/ic_search"
         android:layout_marginStart="@dimen/_60sdp"
         android:drawablePadding="@dimen/_5sdp"
-        android:hint="Search For Room Names"
+        android:hint="Search Room Names"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete"
         android:paddingStart="@dimen/_10sdp"
