--- a/app/src/main/res/layout/loadingdialog.xml
+++ b/app/src/main/res/layout/loadingdialog.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
+    android:background="@color/lightBlueTransparent"
     android:orientation="vertical"
     android:padding="@dimen/_10sdp">
 
