--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -16,17 +16,17 @@
 
         <ImageView
             android:id="@+id/ivSetting"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
+            android:layout_width="@dimen/_33sdp"
+            android:layout_height="@dimen/_33sdp"
             android:layout_margin="@dimen/_15sdp"
-            android:src="@drawable/img_menu" />
+            android:src="@drawable/menu_img" />
 
         <ImageView
             android:id="@+id/ivNotification"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
-            android:layout_margin="@dimen/_15sdp"
-            android:src="@drawable/img_notification" />
+            android:layout_marginTop="@dimen/_19sdp"
+            android:src="@drawable/notification_img" />
 
         <TextView
             android:id="@+id/txtHelloName"
@@ -41,7 +41,7 @@
             android:hint="Hello, Anand"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/_20sdp"
             android:textStyle="italic" />
     </LinearLayout>
@@ -278,7 +278,7 @@
         android:layout_height="@dimen/_1sdp"
         android:layout_marginHorizontal="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_20sdp"
-        android:background="@color/white"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <View
@@ -287,7 +287,7 @@
         android:layout_marginHorizontal="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_24sdp"
         android:layout_marginBottom="@dimen/_25sdp"
-        android:background="@color/white"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <View
@@ -296,7 +296,7 @@
         android:layout_marginHorizontal="@dimen/_60sdp"
         android:layout_marginTop="@dimen/_28sdp"
         android:layout_marginBottom="@dimen/_30sdp"
-        android:background="@color/white"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
@@ -305,7 +305,7 @@
         android:layout_marginBottom="@dimen/_35sdp"
         android:gravity="center"
         android:text="MeetEase"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/_18sdp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent" />
