--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/ic_search"
                 android:layout_marginTop="@dimen/_13sdp"
-                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginStart="0dp"
                 android:layout_marginEnd="@dimen/_45sdp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:drawablePadding="@dimen/_10sdp"
@@ -56,7 +56,7 @@
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_17sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:src="@drawable/filter_img"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
