--- a/app/src/main/res/layout/activity_profile_show.xml
+++ b/app/src/main/res/layout/activity_profile_show.xml
@@ -34,6 +34,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/_5sdp"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -50,6 +51,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="@dimen/_5sdp"
+                android:paddingTop="@dimen/_5sdp"
                 android:layout_weight="1.3"
                 android:orientation="vertical">
 
@@ -66,7 +68,7 @@
                         android:ellipsize="marquee"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
-                        android:hint="Aziz Kachwala"
+                        android:text="your name"
                         android:marqueeRepeatLimit="marquee_forever"
                         android:singleLine="true"
                         android:textColor="@color/white"
@@ -76,9 +78,8 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:layout_width="@dimen/_35sdp"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="@dimen/_5sdp"
+                        android:layout_width="@dimen/_28sdp"
+                        android:layout_height="@dimen/_25sdp"
                         android:src="@drawable/baseline_edit_24"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -93,7 +94,7 @@
                     android:ellipsize="marquee"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:hint="azizKachwala123456789@gmail.com"
+                    android:text="azizKachwala123456789@gmail.com"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
                     android:textColor="@color/white"
@@ -109,7 +110,7 @@
                     android:ellipsize="marquee"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:hint="9988776655"
+                    android:text="9988776655"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
                     android:textColor="@color/white"
@@ -145,16 +146,17 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="App Name"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_22ssp" />
+                android:textSize="@dimen/_20ssp" />
 
             <TextView
                 android:id="@+id/txtAppName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:hint="MeetEase"
+                android:text="MeetEase"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_18ssp" />
+                android:textSize="@dimen/_15ssp" />
 
         </LinearLayout>
 
@@ -183,19 +185,57 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="App Version"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_22ssp" />
+                android:textSize="@dimen/_20ssp" />
 
             <TextView
                 android:id="@+id/txtVersion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:hint="v1.1"
+                android:text="v1.1"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_18ssp" />
+                android:textSize="@dimen/_15ssp" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginHorizontal="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_24sdp"
+        android:layout_marginBottom="@dimen/_25sdp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginHorizontal="@dimen/_60sdp"
+        android:layout_marginTop="@dimen/_28sdp"
+        android:layout_marginBottom="@dimen/_30sdp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_35sdp"
+        android:gravity="center"
+        android:text="MeetEase"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_18sdp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
