--- a/app/src/main/res/layout/upcoming_meeting_item.xml
+++ b/app/src/main/res/layout/upcoming_meeting_item.xml
@@ -94,12 +94,10 @@
                 style="@style/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_10sdp"
                 android:layout_gravity="end"
-                android:layout_marginBottom="@dimen/_5sdp"
                 android:padding="0dp"
-                android:text="View Info"
-                android:textColor="@color/black"
-                app:backgroundTint="@color/lightBlueTransparent" />
+                android:text="View Info"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
