--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,27 +9,22 @@
 
     <style name="button">
         <item name="android:background">@drawable/button_shape</item>
-        <item name="backgroundTint">@color/darkBlue</item>
+        <item name="backgroundTint">@color/lightBlue</item>
         <item name="android:paddingStart">@dimen/_10sdp</item>
         <item name="android:paddingEnd">@dimen/_10sdp</item>
         <item name="android:paddingBottom">@dimen/_10sdp</item>
         <item name="android:paddingTop">@dimen/_10sdp</item>
         <item name="android:textSize">@dimen/_15sdp</item>
-        <item name="android:layout_marginStart">@dimen/_10sdp</item>
-        <item name="android:layout_marginTop">@dimen/_10sdp</item>
-        <item name="android:layout_marginEnd">@dimen/_10sdp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="edittext">
         <item name="android:background">@drawable/edittext_shape</item>
-        <item name="backgroundTint">@color/white</item>
+        <item name="backgroundTint">@color/gray</item>
         <item name="android:paddingStart">@dimen/_20sdp</item>
         <item name="android:paddingEnd">@dimen/_10sdp</item>
         <item name="android:paddingBottom">@dimen/_10sdp</item>
         <item name="android:paddingTop">@dimen/_10sdp</item>
-        <item name="android:layout_marginStart">@dimen/_10sdp</item>
-        <item name="android:layout_marginTop">@dimen/_10sdp</item>
-        <item name="android:layout_marginEnd">@dimen/_10sdp</item>
     </style>
 
     <style name="RatingBar" parent="Widget.AppCompat.RatingBar.Indicator">
