--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -218,6 +218,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
+        android:padding="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:gravity="center"
         android:hint="New Password"
         android:imeOptions="actionNext"
@@ -232,6 +234,8 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:gravity="center"
         android:hint="Confirm Password"
+        android:padding="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete"
         app:layout_constraintTop_toBottomOf="@+id/etvNewPassword" />
