--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/txtHeading"
         android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:hint="Old Password"
         android:imeOptions="actionNext"
         android:inputType="textAutoComplete" />
@@ -43,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/etvOldPassword"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:hint="New Password"
         android:imeOptions="actionNext"
         android:inputType="textAutoComplete" />
@@ -54,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/etvNewPassword"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:hint="Confirm Password"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete" />
