--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,9 @@
         android:layout_below="@id/txtHeading"
         android:layout_marginTop="@dimen/_30sdp"
         android:hint="Email Or Phone"
+        android:padding="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:drawableStart="@drawable/baseline_email_24"
         android:drawablePadding="@dimen/_10sdp"
         android:imeOptions="actionNext"
@@ -50,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:layout_marginHorizontal="@dimen/_10sdp"
             android:drawableStart="@drawable/baseline_password_24"
             android:drawablePadding="@dimen/_10sdp"
             android:imeOptions="actionDone"
@@ -61,8 +65,7 @@
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_40sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             android:src="@drawable/baseline_eye_24" />
 
     </RelativeLayout>
@@ -112,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/don_t_have_an_account_signup"
-            android:textColor="@color/lightBlueTransparent"
+            android:textColor="@color/lightBlue"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -125,7 +128,7 @@
         android:layout_centerHorizontal="true"
         android:layout_weight="1"
         android:elevation="@dimen/_1sdp"
-        app:cardCornerRadius="@dimen/_20sdp">
+        app:cardCornerRadius="@dimen/_60sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
