--- a/app/src/main/res/layout/dialog_password_verify.xml
+++ b/app/src/main/res/layout/dialog_password_verify.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_20sdp"
         android:hint="Enter your password"
         android:inputType="text" />
