--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -10,8 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/ivBack"
             android:layout_width="@dimen/_35sdp"
@@ -19,28 +20,29 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:paddingStart="@dimen/_5sdp"
-            android:src="@drawable/ic_back"/>
+            android:src="@drawable/ic_back" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/etvSearch"
                 style="@style/edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_search"
-                android:layout_marginTop="@dimen/_13sdp"
                 android:layout_marginStart="0dp"
+                android:layout_marginTop="@dimen/_13sdp"
                 android:layout_marginEnd="@dimen/_45sdp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="@dimen/_10sdp"
                 android:hint="Search For Room"
                 android:imeOptions="actionDone"
                 android:inputType="textAutoComplete"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_30sdp"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/ivClose"
@@ -51,6 +53,7 @@
                 android:src="@drawable/ic_close"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <ImageView
                 android:id="@+id/img_filter"
                 android:layout_width="@dimen/_30sdp"
@@ -62,10 +65,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/tvNoData"
