--- a/app/src/main/res/layout/activity_payment_success.xml
+++ b/app/src/main/res/layout/activity_payment_success.xml
@@ -4,28 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightBlue"
     tools:context=".activity.homeScreen.mainScreen.create.PaymentSuccessActivity">
-
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/ivPaymentGif"
             android:layout_width="@dimen/_100sdp"
             android:layout_height="@dimen/_100sdp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/background_gif"
+            app:tint="@color/black"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/txtPaymentMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Payment Successful"
+            android:textColor="@color/black"
             android:textSize="@dimen/_30ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,19 +39,21 @@
             android:id="@+id/txtPaymentShow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/txtPaymentMessage"
+            android:textColor="@color/black"
             android:text="You will be Redirected to Booking Status in"
-            android:layout_marginTop="@dimen/_10sdp"/>
+            app:layout_constraintTop_toBottomOf="@id/txtPaymentMessage" />
 
         <TextView
             android:id="@+id/txtTimer"
-            android:text="5 Seconds"
-            app:layout_constraintTop_toBottomOf="@id/txtPaymentShow"
-            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:text="5 Seconds"
+            app:layout_constraintTop_toBottomOf="@id/txtPaymentShow" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
