--- a/app/src/main/res/layout/previous_meeting_item.xml
+++ b/app/src/main/res/layout/previous_meeting_item.xml
@@ -106,7 +106,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp">
 
                 <RatingBar
                     android:id="@+id/ratingBar"
