--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -22,8 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password"
-        android:textSize="@dimen/_30sdp"
         android:textColor="@color/black"
+        android:textSize="@dimen/_30sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivBack" />
@@ -95,6 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:padding="0dp"
         android:text="Send"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,9 +105,9 @@
         android:id="@+id/lytOtp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
         android:layout_marginTop="@dimen/_20sdp"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/btnSend">
 
         <EditText
@@ -114,90 +115,90 @@
             style="@style/edittext"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:maxLength="1"
-            android:gravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:gravity="center"
             android:imeOptions="actionNext"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="1"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
 
         <EditText
             android:id="@+id/etvOtp2"
             style="@style/edittext"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:gravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:maxLength="1"
-            android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:gravity="center"
             android:imeOptions="actionNext"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="1"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
 
         <EditText
             android:id="@+id/etvOtp3"
             style="@style/edittext"
-            android:layout_marginTop="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="@dimen/_5sdp"
-            android:maxLength="1"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:gravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
             android:imeOptions="actionNext"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="1"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
 
         <EditText
             android:id="@+id/etvOtp4"
             style="@style/edittext"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:gravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:maxLength="1"
-            android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:gravity="center"
             android:imeOptions="actionNext"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="1"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
 
         <EditText
             android:id="@+id/etvOtp5"
             style="@style/edittext"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:gravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:maxLength="1"
-            android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="@dimen/_5sdp"
+            android:gravity="center"
             android:imeOptions="actionNext"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="1"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
 
         <EditText
             android:id="@+id/etvOtp6"
             style="@style/edittext"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:gravity="center"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            android:maxLength="1"
-            android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
+            android:gravity="center"
             android:imeOptions="actionDone"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="1"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp" />
 
     </LinearLayout>
 
@@ -207,7 +208,10 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:padding="0dp"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_10sdp"
         android:text="Check OTP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lytOtp" />
@@ -217,13 +221,13 @@
         style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:padding="@dimen/_10sdp"
         android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:gravity="center"
         android:hint="New Password"
         android:imeOptions="actionNext"
         android:inputType="textAutoComplete"
+        android:padding="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/btnCheckOtp" />
 
     <EditText
@@ -231,13 +235,13 @@
         style="@style/edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:gravity="center"
         android:hint="Confirm Password"
-        android:padding="@dimen/_10sdp"
-        android:layout_marginHorizontal="@dimen/_10sdp"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete"
+        android:padding="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/etvNewPassword" />
 
     <Button
