--- a/app/src/main/res/layout/all_rooms_item.xml
+++ b/app/src/main/res/layout/all_rooms_item.xml
@@ -38,6 +38,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/_30ssp"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
                 android:textColor="@color/white"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:text="Hotel Taj"/>
