--- a/app/src/main/res/layout/previous_meeting_item.xml
+++ b/app/src/main/res/layout/previous_meeting_item.xml
@@ -55,7 +55,11 @@
                         android:layout_height="0dp"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
-                        android:gravity=""
+                        android:ellipsize="marquee"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:singleLine="true"
                         android:text="Taj Hotel"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_22sdp"
